# SmolVLM-256M-Instruct.axera

./: .gitignore  .gitmodules  README.md
model_convert/: README.md  README_zh.md  build_LM.sh  build_VE.sh  config.json  export.py  export.sh  modeling_idefics3_export.py  run.py  test_onnx.py
model_convert/tools/: extract_embed.py
python/: infer.py  infer.sh  infer_axmodel.py  requirements.txt
python/axengine/: _axclrt.py
python/npu_python_llm/axengine/: README.md  requirements.txt  setup.cfg  setup.py
python/npu_python_llm/axengine/axengine/: _handle.py  version.py
python/npu_python_llm/axengine/axengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/npu_python_llm/axengine/test/: test_input_bf16_output_bf16.py  test_input_fp32_output_fp32.py  test_input_s32_output_fp32.py  test_input_u8_output_fp32.py  test_smoke.py
