[metadata]
description_file = README.md
author = Zhiqiang Wang
author_email = wangzhiqiang@axera-tech.com
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
ignore = E203, E402, W503, W504, F821
per-file-ignores =
    __init__.py: F401, F403, F405
exclude = venv

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring

[options]
zip_safe = false
include_package_data = true
python_requires = == 3.10.12

[sdist]
formats = zip, gztar
